# CityBuilder

./: .gitignore  CMakeLists.txt  README.md  main.cc  vcpkg.json
A Faire/: Summative.pptx
api/: CMakeLists.txt
api/include/gameplay/: building.h  building_manager.h  change_cursor.h  game_ressource.h  tuto.h
api/include/graphics/: RessourceManager.h  Tilemap.h  ressource_manager.h  tile.h  tilemap.h
api/include/ui/: UIButton.h  ui_button.h  uibutton.h
api/src/gameplay/: building.cc  building_manager.cc  game_ressource.cc  tuto.cc
api/src/graphics/: ResourceManager.cc  Tilemap.cc  resource_manager.cc  tile.cc  tilemap.cc
api/src/ui/: UIButton.cc  ui_button.cc  uibutton.cc
core/: CMakeLists.txt
core/include/maths/: basic_vector.h  dynamic_queue.h  dynamic_stack.h  fixed_queue.h  fixed_stack.h  fixed_vector.h  small_vector.h  vec2f.h  vec2i.h  vector.h
core/include/ressource_managment/: ressource_manager.h
core/test/: test_basic_vector.cc  test_dynamic_queue.cc  test_dynamic_stack.cc  test_fixed_queue.cc  test_fixed_stack.cc  test_small_vector.cc  test_vec2.cc  test_vec2f.cc  test_vec2i.cc  test_vector.cc
game/: CMakeLists.txt
game/include/: main_game.h
game/src/: main_game.cc
ressources/: Diagram Production.dot
